Noissue. Fix elements alignment across the UI

--- a/src/app/components/shared/experiments-stats/experiments-stats.component.scss
+++ b/src/app/components/shared/experiments-stats/experiments-stats.component.scss
@@ -68,7 +68,7 @@
       margin-right: 10px;
       background: #cbcbef;
       position: absolute;
-      top: 6px;
+      top: 3px;
       left: -22px;
       border: .5px solid rgba($color-black, .15);
     }
